--- a/productos.html
+++ b/productos.html
@@ -34,10 +34,15 @@
         </div>
       </nav>
 
+      <h1>Productos</h1>
       <select name="select">
         <option value="value1">Manzanas</option> 
         <option value="value2" selected>Sandias</option>
         <option value="value3">Peras</option>
       </select>
+
+      <input type="number" name="Cantidad"><br>
+        
+
 </body>
 </html>
